--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.main.MainActivity">
+    tools:context=".ui.activity.user.main.MainActivity"
+    android:id="@+id/drawerLayoutMain"
+    android:background="@color/biru">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/biru_main">
+
+        <ImageView
+            android:id="@+id/ivDrawerView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="22dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/baseline_dehaze_24"
+            android:elevation="10dp"/>
+
+        <TextView
+            android:id="@+id/tvNamaUser"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ivDrawerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="70dp"
+            android:elevation="10dp"
+            android:text="Hy, Pelanggan Setia dan setia"
+            android:textSize="18sp"
+            android:textColor="@color/text_white"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/lyJadwalHariIni"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="180dp"
+            android:paddingBottom="20dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:orientation="vertical"
+            android:visibility="visible"
+            android:background="@drawable/bg_main_content">
+
+            <TextView
+                android:id="@+id/tvTitleTagihanAnda"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="16dp"
+                android:text="Daftar Tagihan"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTagihan"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/tvTitleTagihanAnda"
+                app:layout_constraintBottom_toTopOf="@id/vPembatas"
+                android:layout_marginTop="6dp"
+                android:paddingBottom="8dp"
+                tools:listitem="@layout/list_pembayaran"
+                tools:itemCount="2" />
+
+            <Button
+                android:id="@+id/btnBayar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="10dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:text="Bayar"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+            <View
+                android:id="@+id/vPembatas"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toTopOf="@id/tvTitleTotalTagihan"
+                android:background="@color/abuabu_muda"/>
+
+            <TextView
+                android:id="@+id/tvTitleTotalTagihan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/tvBulanTagihan"
+                android:layout_marginBottom="8dp"
+                android:text="Total Tagihan"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvBulanTagihan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tvTotalTagihan"
+                app:layout_constraintBottom_toTopOf="@id/btnBayar"
+                android:layout_marginBottom="12dp"
+                android:layout_marginEnd="14dp"
+                android:text="Januari, Februari, Maret"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:textStyle="normal"/>
+            <TextView
+                android:id="@+id/tvTotalTagihan"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/btnBayar"
+                android:layout_marginBottom="12dp"
+                android:text="Rp. 50.000.000"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:gravity="right"/>
+
+            <TextView
+                android:id="@+id/tvNoPesanan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tvTitleTagihanAnda"
+                android:layout_marginTop="-5dp"
+                android:background="@drawable/bg_teks_penjelasan"
+                android:paddingTop="25dp"
+                android:paddingBottom="25dp"
+                android:text="Anda Sudah Membayar Bulan ini."
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:textStyle="normal"
+                android:gravity="center"
+                android:visibility="gone"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu_user"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
