--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingBottom="6dp">
+    android:paddingBottom="6dp"
+    android:background="@color/white">
 
     <ImageView
         android:layout_width="match_parent"
