--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-
     <!-- warna -->
+    <color name="text_white">#F3F3F3</color>
     <color name="bg_white">#F5F5FA</color>
-    <!-- Color -->
     <color name="abuabu_muda_sekali">#CCEEEEEE</color>
     <color name="abuabu_muda">#E6E6E6</color>
     <color name="abuabu_tua">#767676</color>
