admin - akun user

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,6 @@
     <color name="biru">#2596F7</color>
     <color name="biru_main">#3E52B5</color>
     <color name="biru_secondary">#3848A8</color>
+    <color name="biru_tua">#1A74C1</color>
 
 </resources>
