--- a/app/src/main/res/layout/activity_admin_pembayaran.xml
+++ b/app/src/main/res/layout/activity_admin_pembayaran.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.admin.AdminMainActivity">
+    tools:context=".ui.activity.admin.AdminPembayaranActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
