--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.user.main.MainActivity"
+    tools:context=".ui.activity.user.MainActivity"
     android:id="@+id/drawerLayoutMain"
     android:background="@color/biru">
 
