--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.user.register.RegisterActivity"
+    tools:context=".ui.activity.user.RegisterActivity"
     android:background="@color/white">
     <LinearLayout
         android:layout_width="match_parent"
