--- a/app/src/main/res/layout/alert_dialog_update_akun.xml
+++ b/app/src/main/res/layout/alert_dialog_update_akun.xml
@@ -136,7 +136,7 @@
                     android:textStyle="bold"/>
 
                 <EditText
-                    android:id="@+id/etEditAlamat"
+                    android:id="@+id/etEditNoAlamat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
