--- a/app/src/main/res/layout/activity_admin_biaya.xml
+++ b/app/src/main/res/layout/activity_admin_biaya.xml
@@ -130,6 +130,7 @@
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clUbah"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/clBiaya"
