--- a/app/src/main/res/layout/activity_admin_users.xml
+++ b/app/src/main/res/layout/activity_admin_users.xml
@@ -61,11 +61,37 @@
             android:textColor="@color/white"
             android:background="@drawable/bg_card"/>
 
+        <TextView
+            android:id="@+id/titleFiler"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/btnTambah"
+            app:layout_constraintStart_toStartOf="@id/spFilter"
+            app:layout_constraintEnd_toEndOf="@id/spFilter"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="4dp"
+            android:text="Filter Data"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
+        <Spinner
+            android:id="@+id/spFilter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/titleFiler"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/bg_card"
+            android:spinnerMode="dropdown"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvAkun"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/btnTambah"
+            app:layout_constraintTop_toBottomOf="@id/spFilter"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
